<resources>
    <string name="app_name">Nature Space Cricket Academy</string>
    <string name="login_title">Welcome Back</string>
    <string name="username_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign In</string>
    <string name="tab_players">Players</string>
    <string name="tab_attendance">Attendance</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="add_player">Add Player</string>
    <string name="search_players">Search players...</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="player_name_hint">Player Name</string>
    <string name="player_email_hint">Player Email</string>
    <string name="player_age_hint">Player Age</string>
    <string name="player_batch_hint">Player Batch</string>
    <string name="player_specialization_hint">Specialization</string>

    <string name="cancel">Cancel</string>
    <string name="save_player">Save Player</string>

    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_attendance">Attendance</string>
    <string name="nav_players">Player Progress</string>
    <string name="nav_coaches">Coaches</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
</resources>
