<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_attendance" />
        <item
            android:id="@+id/nav_players"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_players" />
        <item
            android:id="@+id/nav_coaches"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_coaches" />
        <item
            android:id="@+id/nav_events"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Events &amp; Matches" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
